k8s/gps_service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fun-taxi-gps-service
spec:
  selector:
    app: fun-taxi-gps-service
  ports:
    - protocol: TCP
      port: 8099
      targetPort: 80
